<resources>
    <string name="app_name">Shi付</string>
    <string name="slogan">轻松支付，简单生活</string>
    <string name="title_activity_login">用户登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码&#160;&#160;&#160;&#160;</string>
    <string name="title_activity_register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_register">确认注册</string>
    <string name="loading">处理中</string>
    <string name="title_activity_index">主页</string>
    <string name="nfc_pay">NFC扫描购买</string>
    <string name="receive">收款</string>
    <string name="manage_card">管理银行卡</string>
    <string name="get_good_list">获取商品列表</string>
    <string name="settings">设置</string>
    <string name="title_activity_nfcpay">NFC支付</string>
    <string name="title_activity_good_list">可购买商品列表</string>
    <string name="title_activity_card_management">银行卡管理</string>
    <string name="title_activity_setting">设置</string>
    <string name="account_info">账户信息</string>
    <string name="enable_aks">开启一键购买功能</string>
    <string name="disable_aks">关闭一键购买功能</string>
    <string name="logout">退出登录</string>
    <string name="change_pwd">修改登录密码</string>
    <string name="title_activity_change_pwd">修改登录密码</string>
    <string name="new_password">新密码</string>
    <string name="origin_password">原密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="add_new_card">添加新的银行卡</string>
    <string name="title_activity_add_card">添加银行卡</string>
    <string name="title_activity_remove_card">移除银行卡</string>
    <string name="card_number">银行卡号</string>
    <string name="card_password">银行卡密码</string>
    <string name="confirm_add">确认添加</string>
    <string name="bank_name">银行名称</string>
    <string name="confirm_remove">确认移除</string>
    <string name="title_activity_confirm_pay">确认支付</string>
    <string name="card_password_hint">请输入银行卡密码</string>
    <string name="title_activity_order">生成订单</string>
    <string name="aks">一键购买</string>
    <string name="title_activity_akshome">一键购买中心</string>
    <string name="check_all_product">查看全部商品</string>
    <string name="card_num_t">银行卡号：</string>
    <string name="bank_name_t">银行名称：</string>
    <string name="akscenter">您收藏的商品</string>
    <string name="all_product">所有商品列表</string>
    <string name="check_transaction_history">查看交易记录</string>
    <string name="title_activity_transaction_list">交易记录</string>
    <string name="generate_order">生成订单</string>
    <string name="submit_order">提交订单</string>
    <string name="single_price">单价(￥)&#160;</string>
    <string name="product_name">商品名称</string>
    <string name="product_type">商品类别</string>
    <string name="address">送货地址</string>
    <string name="phone_number">联系方式</string>
    <string name="quantity">商品数量</string>
    <string name="cancel">取消</string>
    <string name="confirm_pay">确认支付</string>
    <string name="one">1</string>
    <string name="total_price">总价(￥)&#160;</string>
    <string name="nfc_pay_t">NFC付款</string>
    <string name="notice_nfc">请靠近收款设备</string>
    <string name="buy">购买: </string>
    <string name="transaction_history">交易记录</string>
</resources>
