<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/text_dia_cardnum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/card_number"/>
    <TextView
        android:id="@+id/text_dia_bankname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/bank_name"/>
    <EditText
        android:id="@+id/edit_dia_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/card_password_hint"
        android:textSize="18sp"
        android:inputType="textPassword">
    </EditText>
    <Button
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:background="#ff0099ff"
        android:textColor="#ffffffff"
        android:text="@string/confirm_pay"
        android:id="@+id/btn_dia_confirmpay"
        android:layout_marginBottom="20dp"/>



</LinearLayout>