<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:text="@string/account_info"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:id="@+id/text_setting_header"
            android:background="#ff0099ff"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:id="@+id/btn_setting_change_pwd">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/change_pwd"
                android:layout_weight="0.25" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:id="@+id/btn_setting_logout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/logout"
                android:layout_weight="0.25" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>